// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`errors > throws error when argument missing (last position) 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Missing argument for flag "age".

Here are the docs for this command:


PARAMETERS

  [4m[90mName[39m[24m    [4m[90mType[39m[24m      [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m  
                                                   
  [1m[32mage[39m[22m     [34mnumber[39m    [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m                
                                                   
  [2m[90m     [39m[22m  
  [2m[90mNOTES[39m[22m  
  [2m[90m━━━━━[39m[22m  
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command[39m[22m  
  [2m[90m    line arguments take precedence. Environment variable names are snake [39m[22m  
  [2m[90m    cased versions of the parameter name (or its aliases), case          [39m[22m  
  [2m[90m    insensitive. They must be prefixed with [34mCLI_PARAMETER_[90m or [34mCLI_PARAM_[90m [39m[22m  
  [2m[90m    (case insensitive). Examples:                                        [39m[22m  
  [2m[90m    → [34mCLI_PARAMETER_[90m[32mAGE[90m="..."                                            [39m[22m  
",
  ],
]
`;

exports[`errors > throws error when argument missing (non-last position) 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Missing argument for flag "age".

Here are the docs for this command:


PARAMETERS

  [4m[90mName[39m[24m    [4m[90mType[39m[24m      [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m  
                                                   
  [1m[32mage[39m[22m     [34mnumber[39m    [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m                
                                                   
  [1m[32mname[39m[22m    [34mstring[39m    [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m                
                                                   
  [2m[90m     [39m[22m  
  [2m[90mNOTES[39m[22m  
  [2m[90m━━━━━[39m[22m  
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command[39m[22m  
  [2m[90m    line arguments take precedence. Environment variable names are snake [39m[22m  
  [2m[90m    cased versions of the parameter name (or its aliases), case          [39m[22m  
  [2m[90m    insensitive. They must be prefixed with [34mCLI_PARAMETER_[90m or [34mCLI_PARAM_[90m [39m[22m  
  [2m[90m    (case insensitive). Examples:                                        [39m[22m  
  [2m[90m    → [34mCLI_PARAMETER_[90m[32mAGE[90m="..."                                            [39m[22m  
  [2m[90m    → [34mCLI_PARAMETER_[90m[32mNAME[90m="..."                                           [39m[22m  
",
  ],
]
`;

exports[`errors > validates the  input 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Invalid argument for parameter: "age". The error was:
Invalid input: expected int, received number

Here are the docs for this command:


PARAMETERS

  [4m[90mName[39m[24m    [4m[90mType[39m[24m      [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m  
                                                   
  [1m[32mage[39m[22m     [34mnumber[39m    [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m                
                                                   
  [2m[90m     [39m[22m  
  [2m[90mNOTES[39m[22m  
  [2m[90m━━━━━[39m[22m  
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command[39m[22m  
  [2m[90m    line arguments take precedence. Environment variable names are snake [39m[22m  
  [2m[90m    cased versions of the parameter name (or its aliases), case          [39m[22m  
  [2m[90m    insensitive. They must be prefixed with [34mCLI_PARAMETER_[90m or [34mCLI_PARAM_[90m [39m[22m  
  [2m[90m    (case insensitive). Examples:                                        [39m[22m  
  [2m[90m    → [34mCLI_PARAMETER_[90m[32mAGE[90m="..."                                            [39m[22m  
",
  ],
]
`;
